--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -9,10 +9,10 @@ services:
       - "5432:5432"
     volumes:
       - ./data:/var/lib/postgresql/data
-  pg-admin:
-    image: dpage/pgadmin4
-    ports:
-      - "5050:80"
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@admin.admin
-      - PGADMIN_DEFAULT_PASSWORD=admin
+  # pg-admin:
+  #   image: dpage/pgadmin4
+  #   ports:
+  #     - "5050:80"
+  #   environment:
+  #     - PGADMIN_DEFAULT_EMAIL=admin@admin.admin
+  #     - PGADMIN_DEFAULT_PASSWORD=admin
