--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "rm -rf build && tsc && node build/index.js",
+    "build": "tsc",
+    "dev": "nodemon src/index.ts"
   },
   "author": "banik",
   "license": "ISC",
   "dependencies": {
+    "@types/pg": "^8.6.2",
     "express": "^4.17.1",
-    "mongoose": "^6.1.1"
+    "pg": "^8.7.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.0",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
