--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,9 @@ services:
     environment:
       - PORT=1313
     depends_on:
-      - database
-  database:
+      - database-postgres
+      - database-redis
+  database-postgres:
     image: postgres
     environment:
       - POSTGRES_USER=postgres
@@ -15,4 +16,10 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data
+  database-redis:
+    image: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./redis-data:/data
