--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "author": "banik",
   "license": "ISC",
   "dependencies": {
-    "@types/pg": "^8.6.2",
+    "connect-redis": "^6.0.0",
     "express": "^4.17.1",
-    "pg": "^8.7.1"
+    "express-session": "^1.17.2",
+    "pg": "^8.7.1",
+    "redis": "^4.0.1"
   },
   "devDependencies": {
+    "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/node": "^17.0.0",
+    "@types/pg": "^8.6.2",
+    "@types/redis": "^4.0.11",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
