--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
 services:
-  web:
+  nginx:
+    image: nginx:latest
     ports:
-      - "1313:1313"
+      - "1313:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+  web:
     environment:
       - PORT=1313
     depends_on:
